Removed examples
